plugins {
    id 'java'
    id 'jacoco'
    id 'me.champeau.jmh' version '0.7.1'
}

group = 'ru.nsu.lavrenenkov.prime'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.jetbrains:annotations:24.0.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    implementation ("org.openjdk.jmh:jmh-core:1.37")
    annotationProcessor ("org.openjdk.jmh:jmh-generator-annprocess:1.37")
    jmhImplementation 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

jmh {
    includes = ['ru.nsu.lavrenenkov.prime.PrimeCheckerBenchmark'] // Укажите, какие бенчмарки запускать
    fork = 1 // Количество форков
    warmupIterations = 5 // Количество итераций прогрева
    iterations = 20 // Количество итераций измерения
}
sourceSets {
    jmh {
        java {
            srcDirs = ['src/test/java'] // Указываем, где искать бенчмарки
        }
    }
}
test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)  // Указываем нужную версию Java
    }
}
jacocoTestReport {
    reports {
        xml.required = true
    }
}